# cloninator

./: mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  lint.yml  tests.yml
docs/: CHANGELOG.md  README.md  contributing.md  index.md  installation.md  usage.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: commands.md  configuration.md  examples.md  workflows.md
docs/reference/: cli.md  configuration.md
docs/rtd/: .readthedocs.yaml  requirements.txt
src/cloninator/: __main__.py  __version__.py  clone.py  generate.py
src/cloninator/lib/: cli.py  parser.py  type_defs.py  utils.py
src/cloninator/subcommands/: __init__.py  base.py  clone.py  generate.py
tests/cloninator/: test_main.py  test_utils.py
tests/cloninator/lib/: test_parser.py  test_utils.py
tests/cloninator/subcommands/: test_clone.py  test_generate.py
