[build-system]
requires = [
    "phosphorus>=0.3",
]
build-backend = "phosphorus.construction.api"

[project]
name = "cloninator"
dynamic = [
    "version",
]

authors = [
    { name = "Stephanos Kuma", email = "stephanos@kuma.ai" },
]
license = { text = "LGPLv3+" }

readme = "docs/README.md"
description = "A cli tool to clone your repos"
keywords = [
    "git",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
]

requires-python = "~=3.11"
dependencies = [
    "dj_settings~=5.0",
    "PyYAML~=6.0",
]

[project.urls]
homepage = "https://cloninator.readthedocs.io/en/stable/"
repository = "https://github.com/spapanik/cloninator"
documentation = "https://cloninator.readthedocs.io/en/stable/"

[project.scripts]
cloninator = "cloninator.__main__:main"

[tool.phosphorus.dev-dependencies]
dev = [
    "ipdb~=0.13",
    "ipython~=8.21",
]
lint = [
    "black~=24.1",
    "mypy~=1.8",
    "ruff~=0.5",
    "types-PyYAML~=6.0",
]
test = [
    "pytest~=8.0",
    "pytest-cov~=5.0",
]
docs = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.5",
    "mkdocs-material-extensions~=1.3",
    "Pygments~=2.17",
    "pymdown-extensions~=10.8",
]

[tool.phosphorus.dynamic]
version = { file = "src/cloninator/__version__.py" }

[tool.black]
target-version = [
    "py311",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
src = [
    "src",
]
target-version = "py311"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FLY",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PGH",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "COM812",
    "E501",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "FBT001",
    "PT011",
    "S101",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.ruff.lint.isort]
combine-as-imports = true
forced-separate = [
    "tests",
]
split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = "tests"

[tool.coverage.run]
source = [
    "src/",
]
data_file = ".cov_cache/coverage.dat"

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
